# combined_mapping_and_object_detecton

./: README.md
segmentation_node-C++/: CMakeLists.txt  package.xml
segmentation_node-C++/cfg/: params.yaml
segmentation_node-C++/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
segmentation_node-C++/devel/lib/pkgconfig/: segmentation.pc
segmentation_node-C++/devel/share/segmentation/cmake/: segmentationConfig.cmake
segmentation_node-C++/include/segmentation/: segmentation_node.h
segmentation_node-C++/launch/: segmentation_node.launch
segmentation_node-C++/src/: segmentation_node.cpp
