<?xml version="1.0"?>
<package format="2">
<name>segmentation</name>
  <version>0.1.0</version>
  <description>segmentation</description>

  <maintainer email="florenzgraf@gmx.de">FlorenzGraf</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>darknet_ros_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
